# processing

./: Setup.hs  processing.cabal  readme.md
Graphics/Web/: Processing.hs
Graphics/Web/Processing/: Basic.hs  Html.hs  Mid.hs  Optimize.hs  Simple.hs
Graphics/Web/Processing/Basic/: Baked.hs
Graphics/Web/Processing/Core/: Interface.hs  Monad.hs  Primal.hs  TH.hs  Types.hs  Var.hs
Graphics/Web/Processing/Mid/: CustomVar.hs
examples/: keys.hs  mill.hs  pacman.hs  pacman.map  random.hs  sierpinski.hs  twist.hs
tests/: optimize.hs
