Name: processing
Version: 1.1.0.0
Author: Daniel Díaz
Category: Graphics
Build-type: Simple
License: BSD3
License-file: license
Maintainer: Daniel Díaz (dhelta.diaz `at` gmail.com)
Bug-reports: https://github.com/Daniel-Diaz/processing/issues
Synopsis: Web graphic applications with Processing.
Stability: In development
Tested-with: GHC == 7.6.3
Description:
  /Processing/ is a visual design programming language.
  /Processing.js/ is the sister project of Processing designed
  for the web.
  The Haskell /processing/ package is a web animation library
  with /Processing.js/ as backend.
  .
  /What is this for?/
  .
  With this library you are able to write scripts that, once
  executed in a browser, will execute interactive visual programs.
  .
  /Where can I see a running example?/
  .
  An example output can be reached at <http://liibe.com/experimental/rocket.html>.
  Also, take a look at <http://liibe.com/experimental/mill.html>.
  The code of the latter is included in the source distribution (\/examples\/mill.hs).
  .
  /How do I learn to use it?/
  .
  The API reference of the library includes guidance and is complemented with
  code examples. Look also to the /examples/ directory included in the source
  distribution. It contains some fully working examples.
  .
  The library provides different APIs (interfaces). Each one with a different
  philosophy.
  .
  * /Simple/ ("Graphics.Web.Processing.Simple"): An abstract interface, focusing
  in what you want to be displayed, but not how. The library will know how to
  write the processing code you need. However, you may lack some features that
  you can find in other interfaces.
  .
  * /Mid/ ("Graphics.Web.Processing.Mid"): More imperative feeling, with variables
  and commands. But also convenient and complete. This is the default interface,
  re-exported by "Graphics.Web.Processing".
  .
  * /Basic/ ("Graphics.Web.Processing.Basic"): For people that like to do things
  by hand. The output processing code is predictable and you have great
  control over it.
  .
  The module "Graphics.Web.Processing.Html" helps you to create the HTML document
  where you will display the animation.
Cabal-version: >= 1.6
Extra-source-files:
  readme.md
  examples/twist.hs
  examples/mill.hs
  examples/keys.hs
  examples/random.hs

Source-repository head
  type: git
  location: git@github.com:Daniel-Diaz/processing.git

Library
  Build-depends:
      base == 4.*
    , text >= 0.11.2.3 && < 0.12
    , containers >= 0.5 && < 0.6
    , transformers >= 0.3 && < 0.4
    , mainland-pretty >= 0.2 && < 0.3
    , blaze-html >= 0.5.1 && < 0.7
    , multiset >= 0.2.2 && < 0.3
    , directory
    , filepath
  -- Compatibility with previous GHC versions.
  if impl(ghc < 7.6)
     Build-depends: ghc-prim
  Exposed-modules:
    -- Core modules
    Graphics.Web.Processing.Core.Types
    Graphics.Web.Processing.Core.Interface
    Graphics.Web.Processing.Core.Var
    -- Basic interface
    Graphics.Web.Processing.Basic
    -- Mid interface
    Graphics.Web.Processing.Mid
    Graphics.Web.Processing.Mid.CustomVar
    -- Simple interface
    Graphics.Web.Processing.Simple
    -- Default interface
    Graphics.Web.Processing
    -- Optimizations
    Graphics.Web.Processing.Optimize
    -- HTML
    Graphics.Web.Processing.Html
  Other-modules:
    Graphics.Web.Processing.Core.Primal
    Graphics.Web.Processing.Core.Monad
  Extensions: OverloadedStrings
            , EmptyDataDecls
            -- , DeriveGeneric
            , MultiParamTypeClasses
            , FunctionalDependencies
            , TypeOperators
            -- , DefaultSignatures
            , FlexibleContexts
  GHC-Options: -Wall
